--- a/backend/package.json
+++ b/backend/package.json
@@ -11,15 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.20.0",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.7.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
-    "prisma": "^5.20.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "prisma": "^5.20.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.7.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
